--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gm": "^1.23.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2"
   }
 }
